cms/use-case index: align dropdown and tiles - fixes #936

--- a/liqd_product/assets/scss/components/_cms.scss
+++ b/liqd_product/assets/scss/components/_cms.scss
@@ -57,6 +57,7 @@
 }
 
 .cms__tile-link--inverted {
+    background-color: $brand-primary;
     color: $text-color-inverted;
 
     &:hover,
@@ -86,10 +87,6 @@
 
 .cms-use-case__tile {
     margin-bottom: 3 * $r-spacer;
-}
-
-.cms-use-case__tile--demo {
-    background-color: $brand-primary;
 }
 
 // tablet size
